@@ -121,6 +121,11 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(gplots,plot.venn)
 importFrom(grDevices,colorRampPalette)
+importFrom(graphics,plot.new)
+importFrom(grid,popViewport)
+importFrom(grid,pushViewport)
+importFrom(grid,viewport)
+importFrom(gridBase,gridPLT)
 importFrom(gtools,permutations)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
